--- a/views/prob_statement.ejs
+++ b/views/prob_statement.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <div class="fixed-top" style="background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%) ;">
+        <div style="background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%) ;">
         <div class = "input-group mb-3" style="width: 100%;">
             <h1><a href="/search" style="text-decoration: none; color: black; margin-left: 4%;">GeekPoint</a></h1>
             <form action="/search" method="POST" style="margin: auto; display: block;">
@@ -19,7 +19,7 @@
 
         </div>
         <div style="margin-left: 4%;">
-        <h2 style="margin-top: 8%;">
+        <h2 style="margin-top: 4%;">
             <%=problem.prob_title%>
         </h2>
         <% data.forEach(line => { %>
