--- a/views/search_engine.ejs
+++ b/views/search_engine.ejs
@@ -8,8 +8,8 @@
     <title>GeekPoint</title>
 </head>
 <body style="background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%);">
-    <div class="shadow-lg p-3 mb-5 bg-body rounded" style="margin-top: 10%; margin-left: 20%; margin-right: 20%;">
-        <h1 style="text-align: center; font-size:60px;">GeekPoint</h1>
+    <div class="shadow-lg p-3 mb-5 bg-body rounded" style="margin-top: 10%; margin-left: 10%; margin-right: 10%;">
+        <h1 style="text-align: center; font-size:  6vw;">GeekPoint</h1>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <form action="/search" method="POST">
             <div class="input-group mb-3" style="margin-top: 3%;">
