--- a/views/search_result.ejs
+++ b/views/search_result.ejs
@@ -9,7 +9,7 @@
 </head>
 <body style="background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%);">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <div class="fixed-top" style="background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%) ;">
+    <div style="background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%) ;">
         <div class = "input-group mb-3" style="width: 100%;">
             <h1><a href="/search" style="text-decoration: none; color: black; margin-left: 4%;">GeekPoint</a></h1>
             <form action="/search" method="POST" style="margin: auto; display: block;">
@@ -18,13 +18,13 @@
         </div>
 
     </div>
-    <div class="shadow-lg p-3 mb-5 bg-body rounded" style="margin-top: 7%; margin-left: 10%; margin-right: 10%;">
+    <div class="shadow-lg p-3 mb-5 bg-body rounded" style="margin-top: 2%; margin-left: 10%; margin-right: 10%;">
         <div>
             <h5>Search results </h5>
             <% if (result_arr.length > 0) { %>
             <% for (var i = 0; i < result_arr.length; i++) { %>
                 <div style="margin-bottom: 15px;">
-                    <p style="color: grey;margin-top: 2%; margin-bottom: 0%;"><%=result_arr[i].prob_url%></p>
+                    <p style="color: grey;margin-top: 2%; margin-bottom: 0%; overflow-wrap: break-word;"><%=result_arr[i].prob_url%></p>
                     <a href="/search/<%=result_arr[i]._id%>" target="_blank" rel="noreferrer noopener" style = "text-decoration: none; color: #1CB5E0;">
                         <h3><%=result_arr[i].prob_title%></h3>
                     </a>
