--- a/views/noresult.ejs
+++ b/views/noresult.ejs
@@ -9,7 +9,7 @@
 </head>
 <body style="background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%);">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <div class="fixed-top" style="background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%) ;">
+    <div style="background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%) ;">
         <div class = "input-group mb-3" style="width: 100%;">
             <h1><a href="/search" style="text-decoration: none; color: black; margin-left: 4%;">GeekPoint</a></h1>
             <form action="/search" method="POST" style="margin: auto; display: block;">
@@ -20,7 +20,7 @@
     </div>
     <div class="shadow-lg p-3 mb-5 bg-body rounded" style="margin-top: 7%; margin-left: 10%; margin-right: 10%;">
         <div>
-            <h5>No results found!! </h5>
+            <h5 style="overflow-wrap: break-word;">No results found!! </h5>
         </div>
     </div>
 
